# malscan-engine

./: .gitignore  AGENTS.md  README.md  go.mod  justfile
.githooks/: pre-commit
.github/workflows/: scanners.yml
allow/: allow.go  allow_test.go
badhash/: badhash.go  badhash_test.go
badhash/data/: known-bad-hashes.txt
badnet/: badnet.go  badnet_test.go  feeds.go  fetch.go  fetch_test.go  parse.go  parse_test.go
badnet/data/: bad-domains.txt  bad-emails.txt  bad-ipv4.txt  bad-ipv6.txt  feeds.json
cmd/genblocklist/: feeds.go  main.go  parse.go  parse_test.go
config/: config.go  config_test.go
config/defaults/: aur.json  cargo.json  go.json  (+5 more)
curation/: curation.go  curation_test.go
detect/: TRAUR-LICENSE  behaviors.go  behaviors_test.go  binsource.go  capabilities.go  capabilities_test.go  checksum.go  combination_test.go  cwe.go  engine.go  engine_test.go  fp_regression_test.go  gtfobins_hookcontext_test.go  homograph.go  homograph_test.go  integration_test.go  metadata.go  model.go  name.go  onion.go  ownership.go  ownership_gate_test.go  patterns.go  qualify.go  qualify_test.go  shell.go  temporal.go  util.go  website_fp_test.go
frontend/: Cargo.toml  README.md
frontend/src/: api.rs  app.rs  config.rs  main.rs  model.rs
goodkeys/: goodkeys.go  goodkeys_test.go
ioc/: ioc.go  ioc_fp_test.go  ioc_test.go
iocscan/: allowlist_fp_test.go  badnet.go  badnet_test.go  evidence.go  feed.go  feed_test.go  helpers_test.go  ip_fp_test.go  matcher.go  matcher_test.go  scan.go  scan_test.go  stix.go  stix_test.go  tweetfeed_test.go  website_fp_test.go
(+1 files in other folders)
